src/objects/OOH_Channel__c.object
<CustomObject>
    <description>This object is used to capture channels and sub-channels</description>
    <fields>
        <fullName>OOH_Sub_Channel__c</fullName>
        <label>Sub Channel Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_Sub_channel_name__c</fullName>
        <label>Sub channel name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_channelCode__c</fullName>
        <label>ChannelCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OOH_channelCode__c</columns>
        <columns>OOH_Sub_channel_name__c</columns>
        <columns>OOH_Sub_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>